--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "koa-router": "^7.0.1",
         "lodash": "^4.17.4",
         "mkdir-p": "0.0.7",
+        "moment": "^2.24.0",
         "mysql": "^2.14.1",
+        "node-uuid": "^1.4.8",
         "pify": "^2.3.0",
         "wafer-node-sdk": "^1.4.0"
     },
