智能推荐及订单管理模块

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "koa-jwt": "^3.5.1",
         "koa-log4": "^2.1.0",
         "koa-router": "^7.0.1",
-        "lodash": "^4.17.4",
+        "likely": "^0.2.0",
+        "lodash": "^4.17.11",
         "mkdir-p": "0.0.7",
         "moment": "^2.24.0",
         "mysql": "^2.14.1",
